--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 0.0.0.0 -p 3000",
+    "dev": "next dev",
+    "dev:public": "next dev -H 0.0.0.0 -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
     "framer-motion": "^11.2.14",
     "next": "14.2.4",
     "react": "^18",
@@ -23,7 +23,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
